--- a/index.html
+++ b/index.html
@@ -10,9 +10,32 @@
     # meu-hobby
 <body>
 Meu hobby</h1>
-<p> Eu Gosto de andar de Bicicleta</p>
+<P> Eu Gosto de andar de Bicicleta</P>
+<P> Eu gosto de jogar vôlei </P>
+<P> Eu gosto de acampar</P>
+ <br>
+  <center><img height="250em" src="jair.jpeg"</center>
 
-   </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
 <h3>Pensamento Computacional
   1°a  Jair</h3>
 
